--- a/Language/Phase4-Semantics/tests/test_fail1.txt
+++ b/Language/Phase4-Semantics/tests/test_fail1.txt
@@ -1,12 +1,13 @@
 
 int sum
 sum = 0
-
-int a, b, c, e 
+char d
+int a,  c, e 
+a + f
 a = 10
 b = 10
 c = 10
 e = 10
-a.connectTo(b)
 sum =  a+b + c+e 
+sum  = d
 
